@@ -34,9 +34,6 @@
 //
 // This exception does not invalidate any other reasons why a work based on
 // this file might be covered by the GNU General Public License.
-//
-// Alternative licenses for eCos may be arranged by contacting Red Hat, Inc.
-// at http://sources.redhat.com/ecos/ecos-license/
 // -------------------------------------------
 //####ECOSGPLCOPYRIGHTEND####
 //========================================================================
@@ -72,6 +69,13 @@ extern "C" {
     
 struct dirent
 {
+#ifdef CYGPKG_FILEIO_DIRENT_DTYPE
+  
+    mode_t      d_type; // Only supported with FATFS, RAMFS, ROMFS,
+                        // and JFFS2.
+                        // d_type is not part of POSIX so
+                        // should be used with caution.
+#endif
     char        d_name[NAME_MAX+1];
 };
 
